fix(content): removes unwanted horizontal scrolling

--- a/components/content/index.css
+++ b/components/content/index.css
@@ -4,7 +4,6 @@
   flex-direction: row;
   flex-wrap: wrap;
   align-items: flex-start;
-  width: 100vw;
   top: 128px;
   padding: 0 5rem 5rem 5rem;
   box-sizing: border-box;
